--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
+    "graphql-iso-date": "^3.6.1",
     "graphql-tools": "^7.0.4",
     "mongoose": "^5.11.18",
     "morgan": "~1.9.1"
