--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "nodemon ./bin/www --exec babel-node -e js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-graphql": "^0.12.0",
+    "express-jwt": "^6.0.0",
     "graphql": "^15.5.0",
     "graphql-iso-date": "^3.6.1",
     "graphql-tools": "^7.0.4",
